<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".CalculateAct">

    <TextView
        android:id="@+id/answer"
        android:layout_width="149dp"
        android:layout_height="71dp"
        android:layout_marginTop="48dp"
        android:background="@color/design_default_color_background"
        android:gravity="center_horizontal|center_vertical"
        android:hint="Answer"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height"/>

    <EditText
        android:id="@+id/height"
        android:layout_width="149dp"
        android:layout_height="71dp"
        android:background="@color/design_default_color_background"
        android:editable="true"
        android:gravity="center_horizontal|center_vertical"
        android:hint="Enter Height"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcTitle"
        app:layout_constraintVertical_bias="0.38"/>

    <EditText
        android:id="@+id/base2"
        android:layout_width="149dp"
        android:layout_height="71dp"
        android:layout_marginTop="56dp"
        android:autoText="false"
        android:background="@color/design_default_color_background"
        android:editable="true"
        android:gravity="center"
        android:hint="Enter Base 2 Value"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toEndOf="@+id/base1"
        app:layout_constraintTop_toBottomOf="@+id/calcTitle"/>

    <Button
        android:id="@+id/calcBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="backToMenu"
        android:text="Back"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/calcTitle"
        android:layout_width="320dp"
        android:layout_height="74dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="Calculate the Area of a Trapezoid"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165"/>

    <EditText
        android:id="@+id/base1"
        android:layout_width="149dp"
        android:layout_height="71dp"
        android:layout_marginTop="56dp"
        android:background="@color/design_default_color_background"
        android:editable="true"
        android:gravity="center"
        android:hint="Enter Base 1 Value"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcTitle"/>

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="calcAnswer"
        android:text="Calculate"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer"
        app:layout_constraintVertical_bias="0.028"/>
</androidx.constraintlayout.widget.ConstraintLayout>